--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "mdi-react": "^7.3.0",
     "prop-types": "^15",
     "react": "^16",
     "react-dom": "^16",
