--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
     "prop-types": "^15",
     "react": "^16",
     "react-dom": "^16",
-    "react-fout-stager": "^3.0.0",
-    "react-hot-loader": "^4",
-    "typeface-roboto": "^0.0.75"
+    "react-hot-loader": "^4"
   },
   "devDependencies": {
     "@mozilla-frontend-infra/react-lint": "^2.0.1",
