--- a/package.json
+++ b/package.json
@@ -13,13 +13,19 @@
     "lint": "eslint --cache --format codeframe --ext mjs,jsx,js src"
   },
   "dependencies": {
+    "@babel/core": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
+    "@babel/preset-react": "^7.23.3",
     "@material-ui/core": "^4.11.0",
+    "babel-loader": "^9.1.3",
     "classnames": "^2.2.6",
+    "css-loader": "^6.10.0",
     "mdi-react": "^9.4.0",
     "prop-types": "^15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hot-loader": "^4"
+    "react-hot-loader": "^4",
+    "style-loader": "^3.3.4"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
