--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "yarn": "^1.22.4"
   },
   "scripts": {
-    "start": "NODE_OPTIONS=--openssl-legacy-provider webpack-dev-server --mode development --open",
-    "build": "NODE_OPTIONS=--openssl-legacy-provider webpack --mode production",
+    "start": "webpack serve --mode development --open",
+    "build": "webpack --mode production",
     "lint": "eslint --cache --format codeframe --ext mjs,jsx,js src"
   },
   "dependencies": {
@@ -25,10 +25,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-loader": "^4",
+    "remove": "^0.1.5",
     "style-loader": "^3.3.4"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.4.2",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.2"
